--- a/src/main/webapp/resources/static/css/home-page.css
+++ b/src/main/webapp/resources/static/css/home-page.css
@@ -1,13 +1,43 @@
 @charset "ISO-8859-1";
 
-body
+html
 {
-	font-family: roboto;
+	font-family: Roboto, sans-serif;
 }
 
-footer
+nav ul
 {
-	font-size: 50px;
+	list-style-type: none;
+  	margin: 0;
+  	padding: 0;
+  	width: 200px;
+  	background-color: #333;
+  	height: 100%; 
+  	overflow: hidden;
+}
+
+nav ul li
+{
+	float: left;
+}
+
+nav ul li a
+{
+	display: block;
+  	color: white;
+  	text-align: center;
+  	padding: 14px 16px;
+  	text-decoration: none;
+}
+
+nav ul li a:hover
+{
+	background-color: #111;
+}
+
+.footer
+{
+	font-size: 15px;
 	color: white;
 	background-color: black;
 }
